<resources>
    <string name="app_name" translatable="false">Dictionary Kiss</string>
    <string name="reload_button" translatable="false">Reload</string>
    <string name="undefined_error" translatable="false">Undefined error</string>
    <string name="empty_server_response_on_success">Response from server is empty</string>
    <string name="button_search">Search</string>
    <string name="search_hint">New word</string>
    <string name="image_stub" translatable="false">image</string>
    <string name="delete_description" translatable="false">X</string>
    <string name="dialog_title_device_is_offline">No internet connection</string>
    <string name="error_initialised" translatable="false">The ViewModel should be initialised first</string>
    <string name="dialog_message_device_is_offline" translatable="false">You can not use app without internet connection. Please, check
        internet connection.
    </string>
    <string name="dialog_button_cancel">Close</string>
    <string name="dialog_title_stub" translatable="false">Undefined error</string>
    <string name="dialog_title_attention">Attention</string>
    <string name="empty_library">The library is empty, use the search</string>
    <string name="my_favorite">my favorite</string>
    <string name="title_favoritefeature" translatable="false">Favorite Screen Feature</string>
    <string name="transcription_text">transcription</string>
    <string name="sound_link">Sound link</string>
    <string name="error_stub">Error</string>
    <string name="text_local" translatable="false">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="empte_description_text">You didn\'t pick any favorite words yet.\n\n Find the word, and push heart button</string>
    <string name="empty_main_layout">Use the search button to find translations and meanings of words</string>
    <string name="my_history">my history</string>
    <string name="history_instructions">You do not have any history yet. It will appear if you will push the search button and open the selected word</string>
</resources>