<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/empty_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_x_medium"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_history"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_x_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:elevation="@dimen/elevation_s"
            app:cardCornerRadius="@dimen/corner_radius_m">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/screenshot_history" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/margin_x_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/history_instructions"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/text_size_standard_header"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/success_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_activity_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </FrameLayout>

    <include layout="@layout/loading_layout" />

    <LinearLayout
        android:id="@+id/error_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_stub" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_button" />
    </LinearLayout>

</FrameLayout>
